--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <h2 class="visually-hidden">Our Features</h2>
           <ul class="features-items">
             <li class="features-cards">
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-titles">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +80,11 @@
               </p>
             </li>
             <li class="features-cards">
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-titles">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +92,11 @@
               </p>
             </li>
             <li class="features-cards">
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-titles">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands with the strongest digital growth
@@ -89,6 +104,11 @@
               </p>
             </li>
             <li class="features-cards">
+              <div class="features-icon-box">
+                <svg class="features-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-titles">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -283,13 +303,20 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-item-pictures"
-                src="./images/mobile_app.jpg"
-                alt="mobile app"
-                width="360"
-                height="300"
-              />
+              <thumb class="image-thumb">
+                <img
+                  class="portfolio-list-item-pictures"
+                  src="./images/mobile_app.jpg"
+                  alt="mobile app"
+                  width="360"
+                  height="300"
+                />
+                <p class="text-thumb">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </thumb>
               <div class="portfolio-cards">
                 <h3 class="portfolio-list-item-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
