add ovelay in section portfolio

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -118,7 +118,7 @@
           </ul>
         </div>
       </section>
-      <!--team-->
+      <!---------------------------------team----------------------------------------->
       <section class="our-team">
         <div class="container our-team-container">
           <h2 class="our-team-title">Our Team</h2>
@@ -297,13 +297,13 @@
           </ul>
         </div>
       </section>
-      <!--portfolio-->
+      <!-------------------------------portfolio--------------------------------->
       <section class="page-portfolio">
         <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <thumb class="image-thumb">
+              <div class="image-thumb">
                 <img
                   class="portfolio-list-item-pictures"
                   src="./images/mobile_app.jpg"
@@ -311,12 +311,12 @@
                   width="360"
                   height="300"
                 />
-                <p class="text-thumb">
+                <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
-              </thumb>
+              </div>
               <div class="portfolio-cards">
                 <h3 class="portfolio-list-item-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
@@ -324,26 +324,40 @@
             </li>
 
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-item-pictures"
-                src="./images/pay_by_app.jpg"
-                alt="pay by app"
-                width="360"
-                height="300"
-              />
+              <div class="image-thumb">
+                <img
+                  class="portfolio-list-item-pictures"
+                  src="./images/pay_by_app.jpg"
+                  alt="pay by app"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-cards">
                 <h3 class="portfolio-list-item-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-item-pictures"
-                src="./images/devices.jpg"
-                alt="devices"
-                width="360"
-                height="300"
-              />
+              <div class="image-thumb">
+                <img
+                  class="portfolio-list-item-pictures"
+                  src="./images/devices.jpg"
+                  alt="devices"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-cards">
                 <h3 class="portfolio-list-item-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
@@ -351,39 +365,60 @@
             </li>
 
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-item-pictures"
-                src="./images/taxi.jpg"
-                alt="taxi"
-                width="360"
-                height="300"
-              />
+              <div class="image-thumb">
+                <img
+                  class="portfolio-list-item-pictures"
+                  src="./images/taxi.jpg"
+                  alt="taxi"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-cards">
                 <h3 class="portfolio-list-item-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-item-pictures"
-                src="./images/screenshot.jpg"
-                alt="relaxation picture on the mobile screen"
-                width="360"
-                height="300"
-              />
+              <div class="image-thumb">
+                <img
+                  class="portfolio-list-item-pictures"
+                  src="./images/screenshot.jpg"
+                  alt="relaxation picture on the mobile screen"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-cards">
                 <h3 class="portfolio-list-item-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-list-item-pictures"
-                src="./images/onlin_courses.jpg"
-                alt="girl speaking on the phone"
-                width="360"
-                height="300"
-              />
+              <div class="image-thumb">
+                <img
+                  class="portfolio-list-item-pictures"
+                  src="./images/onlin_courses.jpg"
+                  alt="girl speaking on the phone"
+                  width="360"
+                  height="300"
+                />
+                <p class="portfolio-overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-cards">
                 <h3 class="portfolio-list-item-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -393,6 +428,7 @@
         </div>
       </section>
     </main>
+    <!-- -----------------------footer ------------------------------------>
     <footer class="page-footer">
       <div class="container footer-container">
         <a href="./index.html" class="logo footer-logo"
