--- a/index.html
+++ b/index.html
@@ -431,13 +431,49 @@
     <!-- -----------------------footer ------------------------------------>
     <footer class="page-footer">
       <div class="container footer-container">
-        <a href="./index.html" class="logo footer-logo"
-          >Web<span class="accent-logo">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="logo-paragraph">
+          <a href="./index.html" class="logo footer-logo"
+            >Web<span class="accent-logo">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="social-media-container">
+          <p class="text-social-media">Social media</p>
+          <ul class="social-list-footer">
+            <li class="social-link-items">
+              <a href="#" class="social-link social-link-footer">
+                <svg class="social-icon icons-footer" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link-items">
+              <a href="#" class="social-link social-link-footer">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link-items">
+              <a href="#" class="social-link social-link-footer">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-link-items">
+              <a href="#" class="social-link social-link-footer">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
