--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
         <nav class="header-nav">
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link studio-line" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Portfolio</a>
+            </li>
             <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
           </ul>
         </nav>
